[package]
name = "tweed"
version = "0.1.0"
authors = ["Issac Trotts <issac.trotts@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
twitter-stream = "0.9"
rocket = "0.4"
rusqlite = "0.20"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sentiment = "0.1"
lazy_static = "1.4"
tokio = "0.1"

